--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,12 @@ services:
     ports:
       # - ${ADMINER_PORT}:8080
       - "85:80"
+    environment:
+      - "UPLOAD_LIMIT=64M"
+      - "PMA_ARBITRARY=1"
+      - "PMA_HOST=mysql"
     depends_on:
-      - mysql
+      - "mysql"
 
   #MySQL Service
   mysql:
